--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -31,3 +31,20 @@ jwt.duration=604800
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 spring.servlet.multipart.enabled=true
+
+
+
+#=================kafka config ===================
+#kafka.acks = all
+#kafka.bootstrap-servers=localhost:9092
+#kafka.bootstrap-servers-consumer=localhost:9092
+#kafka.consumer.group_id = 1
+#kafka.consumer.enable_auto_commit = true
+#kafka.consumer.auto_commit_interval_ms = 1000
+##spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+#spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.jackson.serialization.fail-on-empty-beans=false
+#spring.kafka.listener.ack-mode=MANUAL_IMMEDIATE
+
+numConsumersAndPartition = 3
+numBroker = 3
