update code base redis

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -48,3 +48,33 @@ spring.servlet.multipart.enabled=true
 
 numConsumersAndPartition = 3
 numBroker = 3
+
+#================================================== Config redis  ======================================================
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.ssl=false
+spring.redis.name=SEND_SMS
+#vinnet.redis.task-channel=DEVELOPMENT_TASK_CHANNEL
+# Connection timeout (MS)
+spring.redis.timeout=3000
+# redis connection pool configuration
+# Maximum number of links in the pool
+spring.redis.pool-config.max-total=256
+# Maximum free connections in connection pool
+spring.redis.pool-config.max-idle=3000
+# Minimum free connections in connection pool
+spring.redis.pool-config.min-idle=8
+## Connection pool maximum block wait time (use a negative value to indicate no limit)
+#spring.redis.pool-config.max-wait-millis=1000
+## Whether to check the validity of the current link when the caller obtains the link
+#spring.redis.pool-config.test-on-borrow=false
+## Check link validity when returning links to link pool
+#spring.redis.pool-config.test-on-return=false
+## Whether to detect the idle timeout when the caller gets the link. If the timeout occurs, it will be removed
+#spring.redis.pool-config.test-while-idle=true
+## How many links does idle link detection thread detect at a time
+#spring.redis.pool-config.num-tests-per-eviction-run=8
+## Idle link detection thread detection cycle. If it is negative, the detection thread will not run. (unit: ms, default is - layer)
+#spring.redis.pool-config.time-between-eviction-runs-millis=60000
+## Configure the minimum lifetime of a connection in the pool, in milliseconds
+#spring.redis.pool-config.min-evictable-idle-time-millis=300000
